# pycodex

./: .flake8  .gitignore  README.md  pyproject.toml
pycodex/: __init__.py  cli.py  server.py
pycodex/core/: indexer.py  parser.py  scanner.py  search.py
pycodex/models/: database.py
stubs/gitignore_parser/: __init__.pyi
